# wasnvim

./: .editorconfig  README.md
src/klib/: kvec.h
src/nvim/: CMakeLists.txt  autocmd.c  channel.c  channel.h  eval.c  ex_cmds.lua  main.c  message.c  types.h
src/nvim/api/: autocmd.c  vim.c  wasm.c  wasm.h
src/nvim/api/private/: defs.h  helpers.c  helpers.h
src/nvim/eval/: typval.c  typval_defs.h
src/nvim/generators/: gen_api_dispatch.lua  gen_ex_cmds.lua
src/nvim/rust/: CMakeLists.txt  Cargo.toml
src/nvim/rust/gen-api-func-lib/: Cargo.toml  README.md
src/nvim/rust/gen-api-func-lib/headers/: autocmd.h.generated.h  buffer.h.generated.h  command.h.generated.h  deprecated.h.generated.h  extmark.h.generated.h  options.h.generated.h  tabpage.h.generated.h  ui.h.generated.h  vim.h.generated.h  vimscript.h.generated.h  wasm.h.generated.h  win_config.h.generated.h  window.h.generated.h
src/nvim/rust/gen-api-func-lib/src/: lib.rs
src/nvim/rust/nvim-rs/: Cargo.toml
src/nvim/rust/nvim-rs/src/: allocator.rs  arena.rs  lib.rs  types.rs
src/nvim/rust/nvim-rs/src/types/: array.rs  dictionary.rs  ffi_wrapper.rs  mod.rs  object.rs  result.rs  string.rs  wasm_ref.rs
src/nvim/rust/nvim-sys/: Cargo.toml  build.rs  wasm_funcs.rs
src/nvim/rust/nvim-sys/headers/: nvim.h
src/nvim/rust/nvim-sys/src/: lib.rs
src/nvim/rust/nvim-wasm/: Cargo.toml  build.rs  cbindgen.toml
src/nvim/rust/nvim-wasm/include/: wasm-rs.h
src/nvim/rust/nvim-wasm/src/: bin.rs  lib.rs  runtime.rs  types.rs  wasm_ref.rs  wasmref.rs
src/nvim/rust/nvim-wasm/wit/: api.wit  guest-callback.wit  keysets.wit  nvim.wit  types.wit
src/nvim/wasm/: executor.c  executor.h
wasm/example/: .gitignore  README.md
wasm/example/call_func/: Cargo.toml
wasm/example/call_func/src/: lib.rs
wasm/example/callback/: Cargo.toml
wasm/example/callback/src/: lib.rs
wasm/example/callback/wit/: plugin.wit
wasm/example/hello/: Cargo.toml
wasm/example/hello/src/: lib.rs
wasm/example/hello/wit/: plugin.wit
wasm/example/simple_plugin/: Cargo.toml  plugin.wasm
wasm/example/simple_plugin/src/: lib.rs
wasm/example/simple_plugin/wit/: deps.toml  plugin.wit
