[package]
name = "nvim-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# [[bin]]
# name = "test"
# path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nvim-rs = { workspace = true }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
